# jetracer_mpc_ros

./: .gitignore  README.md  pyproject.toml
config/: jet_racer_bicycle.yaml
examples/: jetracer_bicycle_model.py
jetracermpc/: model.py  planner.py
scripts/: create_solver.py
