[tool.poetry]
name = "jetracermpc"
version = "0.1.0"
description = ""
authors = ["Max Spahn <m.spahn@tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
casadi = "3.5.5"
numpy = "^1.23.0"
requests = "^2.31.0"
urdfenvs = {git = "https://github.com/maxspahn/gym_envs_urdf.git", rev = "fix-bicycle-model"}


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
